<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="fill_parent"
                  android:background="#FFFFFF"
                  android:layout_height="48dp">
        <TextView android:id="@+id/food_txt_colddish"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1.0"
                  android:gravity="center"
                  android:textColor="#000000"
                  android:text="@string/colddish"/>
        <TextView android:id="@+id/food_txt_hotdish"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1.0"
                  android:gravity="center"
                  android:textColor="#000000"
                  android:text="@string/hotdish"/>
        <TextView android:id="@+id/food_txt_seafood"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1.0"
                  android:gravity="center"
                  android:textColor="#000000"
                  android:text="@string/seafood"/>
        <TextView android:id="@+id/food_txt_drinks"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1.0"
                  android:gravity="center"
                  android:textColor="#000000"
                  android:text="@string/drinks"/>
    </LinearLayout>
    <ImageView
            android:id="@+id/img_dishlist_cursor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:src="@mipmap/line" />
    <android.support.v4.view.ViewPager
            android:id="@+id/dish_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />


</LinearLayout>
