<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/div_white"
                android:baselineAligned="false"
                android:orientation="vertical">
    <LinearLayout   android:id="@+id/topbar"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bg_topbar">
        <TextView android:id="@+id/food_order_name"
                  android:layout_weight="1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/bg_seabule"
                  android:gravity="center"
                  android:text="@string/hello_world"
        />
        <TextView android:id="@+id/food_order_price"
                  android:layout_weight="1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/bg_seabule"
                  android:gravity="center"
                  android:text="@string/app_name"
        />
        <TextView android:id="@+id/food_order_number"
                  android:layout_weight="1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/bg_seabule"
                  android:gravity="center"
                  android:text="@string/helper"
        />
        <TextView android:layout_weight="1"
                  android:gravity="center"
                  android:text="备注"
                  android:textColor="@color/bg_seabule"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
            android:id="@+id/ly_order_bar"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_white"
            android:orientation="horizontal">
        <TextView android:id="@+id/txt_total_foodnumber"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"/>
        <TextView android:id="@+id/txt_total_foodprice"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"/>
        <Button
                android:id="@+id/button_payorsubmit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/helper"
                android:textColor="@color/bg_seabule"
                android:textSize="16sp"/>

    </LinearLayout>
</RelativeLayout>